DSS-2275: Respond with failure for incorrectly formatted time-stamp requests: BC's  bcprov and bcutil v.1.69; Patch applied for TimeStampSigner; code cleanup for TimeStampSigner
git-svn-id: https://svn.cesecore.eu/svn/signserver-restricted/trunk@12841 91c8134f-2a44-0410-ba45-dce2f532dbc6